MODULES/node-hello-terraform/vpc.tf

resource "aws_vpc" "vpc" {
  cidr_block           = "${var.vpc_cidr_block}"
  enable_dns_hostnames = true
  enable_dns_support   = true

  lifecycle {
    prevent_destroy = false
  }
}
